--- a/ListaSpesaWish/Index.html
+++ b/ListaSpesaWish/Index.html
@@ -44,5 +44,6 @@
     <script type="text/javascript" src="Site/js/services.js"></script>
     <script type="text/javascript" src="Site/js/templates.js"></script>
     <script type="text/javascript" src="Site/js/userController.js"></script>
+    <script type="text/javascript" src="Site/js/directive-listaSpesa.js"></script>
 </body>
 </html>
