--- a/ListaSpesaWish/Index.html
+++ b/ListaSpesaWish/Index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="Content/components/accordion.css" />
     <link rel="stylesheet" type="text/css" href="Content/components/sticky.min.css" />
     <link rel="stylesheet" type="text/css" href="Content/components/form-password.min.css" />
+    <link rel="stylesheet" type="text/css" href="Content/components/notify.min.css" />
     <link rel="stylesheet" type="text/css" href="Site/css/loading-bar.css" />
     <title>Lista della spesa</title>
     <meta charset="utf-8" />
