Sistemazione modali e loading interceptor

--- a/ListaSpesaWish/Index.html
+++ b/ListaSpesaWish/Index.html
@@ -32,8 +32,8 @@
     <script type="text/javascript" src="Scripts/angular.min.js"></script>
     <script type="text/javascript" src="Scripts/angular-route.min.js"></script>
     <script type="text/javascript" src="Scripts/angular-resource.min.js"></script>
-    <script type="text/javascript" src="Scripts/angular-cookies.min.js"></script>
-    <script type="text/javascript" src="Site/js/roundProgress.min.js"></script>
+    <script type="text/javascript" src="Scripts/angular-cookies.min.js"></script>    
+    <script type="text/javascript" src="Site/js/loading-bar.js"></script>   
 
     <script type="text/javascript" src="Scripts/uikit.min.js"></script>
     <script type="text/javascript" src="Scripts/components/tooltip.min.js"></script>
