Mail e stile vari

--- a/ListaSpesaWish/Index.html
+++ b/ListaSpesaWish/Index.html
@@ -17,9 +17,11 @@
         <navbar-top></navbar-top>
         <!-- Content -->
         <div class="content uk-grid" style="min-height:500px">
-            <div class="uk-width-medium-1-1 uk-width-small-1-1">
+            <div class="uk-width-medium-1-10 uk-width-large-2-10"></div>
+            <div class="uk-width-medium-8-10 uk-width-large-6-10 uk-width-small-1-1">
                 <div ng-view></div>
             </div>
+            <div class="uk-width-medium-1-10 uk-width-large-2-10"></div>
         </div>
         <!-- Footer -->
         <div class="uk-block-primary footer uk-responsive-height">
