--- a/ListaSpesaWish/Index.html
+++ b/ListaSpesaWish/Index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" type="text/css" href="Content/components/sticky.min.css" />
     <link rel="stylesheet" type="text/css" href="Content/components/form-password.min.css" />
     <link rel="stylesheet" type="text/css" href="Content/components/notify.min.css" />
+    <link rel="stylesheet" type="text/css" href="Content/components/tooltip.min.css" />
     <link rel="stylesheet" type="text/css" href="Site/css/loading-bar.css" />
+    <link rel="stylesheet" type="text/css" href="Site/css/site.css" />
     <title>Lista della spesa</title>
     <meta charset="utf-8" />
 </head>
@@ -40,7 +42,7 @@
     <script type="text/javascript" src="Scripts/uikit.min.js"></script>
     <script type="text/javascript" src="Scripts/components/tooltip.min.js"></script>
     <script type="text/javascript" src="Scripts/components/notify.min.js"></script>
-    <script type="text/javascript" src="Scripts/components/accordion.min.js"></script>
+    <script type="text/javascript" src="Scripts/components/accordion.min.js"></script>    
 
     <script type="text/javascript" src="Site/js/app.js"></script>
     <script type="text/javascript" src="Site/js/factory.js"></script>
