--- a/ListaSpesaWish/Index.html
+++ b/ListaSpesaWish/Index.html
@@ -3,13 +3,13 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" type="text/css" href="Content/uikit.css" />
-    <link rel="stylesheet" type="text/css" href="Content/components/accordion.css" />
+    <link rel="stylesheet" type="text/css" href="Content/uikit.css" />    
     <link rel="stylesheet" type="text/css" href="Content/components/sticky.min.css" />
     <link rel="stylesheet" type="text/css" href="Content/components/form-password.min.css" />
     <link rel="stylesheet" type="text/css" href="Content/components/notify.min.css" />
     <link rel="stylesheet" type="text/css" href="Content/components/tooltip.min.css" />
     <link rel="stylesheet" type="text/css" href="Site/css/loading-bar.css" />
+    <link rel="stylesheet" type="text/css" href="Site/css/ng-img-crop.css" />
     <link rel="stylesheet" type="text/css" href="Site/css/site.css" />
     <title>Lista della spesa</title>
     <meta charset="utf-8" />
@@ -38,11 +38,11 @@
     <script type="text/javascript" src="Scripts/angular-resource.min.js"></script>
     <script type="text/javascript" src="Scripts/angular-cookies.min.js"></script>    
     <script type="text/javascript" src="Site/js/loading-bar.js"></script>   
+    <script type="text/javascript" src="Site/js/ng-crop.js"></script>   
 
     <script type="text/javascript" src="Scripts/uikit.min.js"></script>
     <script type="text/javascript" src="Scripts/components/tooltip.min.js"></script>
-    <script type="text/javascript" src="Scripts/components/notify.min.js"></script>
-    <script type="text/javascript" src="Scripts/components/accordion.min.js"></script>    
+    <script type="text/javascript" src="Scripts/components/notify.min.js"></script>      
 
     <script type="text/javascript" src="Site/js/app.js"></script>
     <script type="text/javascript" src="Site/js/factory.js"></script>
@@ -50,5 +50,6 @@
     <script type="text/javascript" src="Site/js/templates.js"></script>
     <script type="text/javascript" src="Site/js/userController.js"></script>
     <script type="text/javascript" src="Site/js/directive-listaSpesa.js"></script>
+    <script type="text/javascript" src="Site/js/directive-voci.js"></script>
 </body>
 </html>
